--- a/src/app.scss
+++ b/src/app.scss
@@ -33,6 +33,6 @@ $family-primary: "Raleway";
         'opsz' 48;
 }
 .button .material-symbols-rounded {
-    vertical-align: sub;
+    vertical-align: middle;
     font-size: 1rem;
 }
